Add Scripts To Install Openzfs Modules And Utils With Fixes For 13-CURRENT.

--- a/freebsd-ports-diablo/sysutils/openzfs-kmod/Makefile
+++ b/freebsd-ports-diablo/sysutils/openzfs-kmod/Makefile
@@ -11,7 +11,7 @@ COMMENT=	OpenZFS kernel module for FreeBSD
 
 LICENSE=	CDDL
 
-BROKEN=		fails to build
+#BROKEN=		fails to build
 
 USES=		kmod
 USE_GITHUB=	yes
